--- a/oversurgeryproject/patient.resx
+++ b/oversurgeryproject/patient.resx
@@ -120,12 +120,6 @@
   <metadata name="patientBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>222, 17</value>
   </metadata>
-  <metadata name="patientBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>222, 17</value>
-  </metadata>
-  <metadata name="oversugeryDBDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <metadata name="oversugeryDBDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -135,6 +129,112 @@
   <metadata name="oversugeryDBDataSetBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>621, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAL0AAAAvCAYAAAC2ect4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAAd0SU1FB+ELHhUyKvr8jwYAABceSURBVHhe7ZwJcFZVlsfdFbdBEUJYghB2aDaJ
+        QRaBJkBYQ7O5UdCKNIuASqElBARER9TBUQdsGRSxREbRYek0IoLTgCwKsogsImEJkSaBmEDIvn3z/736
+        jvX6mw+SSJIp6HeqTn15527nnvu/555z34OrPPLII4888sgjjzzyyCOPPPLII4888sgjjzzyyKMrgq6+
+        AP8zULB5wx5dgcTCXiO+XlxJfIv4VvFt/t+bxTeKrxNT70oi5n6tmPkxT5u3zR173CCmjrcBrhACxCz4
+        HeK64tbi+8VR4u7i34vvEzcVh4oBAuC/EgDA3AF1NXFjcTsx82XecFe/rIk4REzdK23T/1MRoAW8/yJu
+        cPPNN/eYM2fO/K1bt36flJSUlpubWyAqTE9Pzzp8+HDi8uXLv4yJiZmgum3F1cVslMsZ+HhuvHnjyMjI
+        YZ9++ulqzfPnjIyMHM27KC8vryA1NfX8gQMHElasWLF20KBBo1S3nvgmsefxL0Ni0QhlqorbvfTSS/NP
+        nz591ieqVKmS76abbsq78cYbU8Sn9XcWsjNnzvgKCwuLNm3atLNJkyYPqB2nAp7vcgQA3poT63cvvvji
+        PAE9l7nfcMMNvuuvvz5TfFp8RpyH7OzZs76ZM2cWNm3adKzaVPG39+gyIzx81Wuvvbbr2rVrtxjYBfJj
+        11133esq+4O4m5ijvo/qTdfi/6ANQFXfqVOn0qKjo8ep7G6xefyLsZuClcPBqKT1AilYfbeMDR82ceLE
+        Wfn5+UV+sCdfc801cyTvK2bezH+wZO+pLIs6+nuWZDXEnBJG7n4vRO46Ja1nVFwbyN3uQhyMSlovkILV
+        d8suxoEUrA5cpoSXqixuv27dum2AWGAu0sL+t2TEsfXFeDNL5Ij1AXcXbYj3tDEKaLN58+bUWrVqDZKc
+        WBfg4/Wpf7uf3Ymg5QD8BtYLrANZXUIJS6qtHoBlDm7D8DcyyqwNTAJKP5akwsgoizh48GACc9Hcs/U8
+        XkzewtwZC/2ZW3tt+rV+0M/Uc00x47j7pb9gc2BzMJ7NmXq0ddcpjd7uE8b6tzpmI9qbTvZMHXcizm95
+        2Zc+KMN+gVigrelhOphtguGhTIiBGLjRq6++uogFx8Nr0f8qWQcx4Q4TsEnbZJncneIIAX9JgwYNfN9+
+        +62vVatW30h2r7iW+HfiLuJocW9xT3FncXMxba0Pdz2YZLGFmDImilGYeG0xSTV9kFTjfRkrXMymNfDA
+        1jchVytxx6ioKDx1mBjPjA4dxSTktAfMUTk5OQXPP/+8T3OK1zMbng3uXhTGCK1cufJDslG+wP+MngE9
+        eRD9skki1b7DgAED6NvaYzPsjD0biO8R39+zZ0/mQT7EPEurN/kEYKJv658EHB1YO9rBXELw3EmM7dop
+        LKMOwEO38rQvzFwjxawrGOjl/0WvZmKzEUyftHXjgb8NM2VCGKtKaGjoACVpGbGxsYQ0P0vGYBjQFiOQ
+        kFGGF4zq37//UcXCvvDw8EJ5wCcki1Tim8EmCiSFQedVXkfMgtVVvSx/0a80btw4PC2Liqdgsq3Hjh0b
+        +9133+07d+5cFollZmZmzqFDhxLmz5//vkDGQnGTxGKgV1Xp1OfNN9+cr3Bt+4kTJ1Kys7N9kg/Uej+i
+        E+1r9ZOpsfOmTZv2Z8m5qYlOTk4uXLx4MaD/u577i9kMttgQv3idBqrzgUA/RH/XaNmyZavZs2c/t2zZ
+        stW7du06opwg++23395IPTFO4wY5k1qTJk3646JFiz7cuHHj94SEe/fuRacIMfMsld7Tp09/W3KAypyx
+        Zf177733oVWrVq0/efJkChcP2sT5R44cSd6yZcthnWKnNL9zSsjzevfu/bnqYy82SrnZl/Flh0/UV7p/
+        aX+lxMREX5s2bVLVho2Cjen7brX5P7gZNGhQBmXiMiEGqj9v3rwP6Rwvrwm+hUzMYgUDvBFltA/v0aPH
+        G4Be3o1T4gvJOl199dX91VfcsGHDinbu3ElSmCuQfKIyvIidINVVZwgnhJJnNhzt49V2mMrwoHeJIz/+
+        +ONVLIQ/1s4Qk1Tm8Azt37//SFhYmIEUUNZZvnx5Egmn0csvv+zTifTnpKSkFJ5feOEFJ1HV+GtVv424
+        sxYxGU8/ZcoU38CBA5dIhjdCD0DFYuMkzDPiFNj01caPHz9bDiNXwHLGUj/0u0tleE70qRQTE9NNGyxl
+        zZo1Th2I8VWG18PrYsvS6s3VKW3DR48eHat2mdSRbeA0PxctXboUMbJCtdss+/ZRG2yL/uVqX63516o/
+        Sr8fde7cuWDJkiWMkafQ8APJ8eLogU2xb4gwMESbYfujjz5q89wmfWNUhr0vmcxrRezYseMwiiqWx8My
+        ALufBS6OqHOnJjFAOzcPsEjRE5IBFjx174iIiIS77roLeZGUJxzA++FhaAuYWo8aNWrRG2+8QZ1C1eEa
+        lCOVY6/5O++8swTd/IZaJBlJNUAZKkMukzx/69atvsjISEDG9SlxIIt5r+r/W926dVMBskCMAZNVP0Xt
+        Vop3+I36pepyRDerU6fOYmTyxs7NVFxc3PZmzZqNVBneGK9K3+btjPHSnFx9NN5/acFssfZKxtGOjWnD
+        ot2nOnNq166doo3u1JMMANIvfWH3kuoN6AkNQxs2bMhJfV5JOHbKVPtXJQek/WTPFyU772/zi2R/EuPU
+        CFmaVYB916uuE65oU/ygqMKZt/TigoQwC/uARRhnEjF58uRlbdu2RaezeiZPJFzGSV4yMQig63rmzJmM
+        oUOH4mkBLLEfcsqLI1O0s47qk/IY9JGpZ+I7DNNQsd7CIUOG+Nq3b48BVkrGRO0UATAROg53z5kzh0ke
+        0jPxJwtSXcf1cB2NzjUhhpSMOJM4kriRjdGjZs2aa3U0+7Sx2FSEVsTIbCo8SNTMmTMPcgrRh/o/LdkI
+        MbEmcXm6X6dGYgeUet5CXfIUSMd2/hdffLHzoYceilU5tuGYxbsCUubA5mU8FuYRhRfBQE8djnB06iav
+        eEB6BYKevqxOSfXGlo0XLFjgnNTUFRA/lAxwcprSVxuFnYv69Onjq1q1KnZ8VzIcT80KtC+xe0PZdBY4
+        k5PDPj9Ixos+8MPcDUsdccJ+nQjDyO/ACeWXTHTC4vWUhygktNFAB/RM0mG7rziiDgq127x586GEhARA
+        X6hnPAXJXRVNvO/cuXMzdbRjlFOSsetZZCdxUVIYk56enkNoo0nOlwxjM/nGH3300V9ZzI4dO5I0viTZ
+        QDEJETEmCzSkXr16b1EHkKrOZ5LhxfCszoYSYPcaEAUIQjeAwoasL8O/Kp6tv90Lye3MJ9I1lzbdunWj
+        e4e0sU8olPlX1SHBA1Tu5I759lNM6oylft2gtzq/6vTNN9849fTsBv0/1CmB3pwwLb/88sut6Ofv73Ex
+        oEU3OLRKlSojyR+4Yla7rZIRdrVUqLGadh06dChv+5IPIOuqfO3UhAkTfHfccUeh+uPUoQwHAh5C5OEf
+        BY+yP5tstGSsDWVlQhjYQF90qaBXcvbj+fPn3aCnb/ppMWbMmA0PPvigE7PLME9LxqJQVm/GjBnzMKom
+        yQnBnTjGAfT3HThw4GfKPvjgg0L9nfrTTz8lx8fHnzLmGTl1MLoMvEXt8CqcJPR/j06RvRzPfkA8Ijaw
+        cprh3XmmLt4Y4xNWNZPBH9GirJVeGbSFjZS8bbvtttssNzGPD3D7EGL4dQkGekenr776ShjcazoFgr40
+        enMiNleyuEVJtNUdI+bUAZhwTYU/49Dbrxc24iTobPZ9//33y9u+YASn0lAO7ENCoZEjR9LfBslausqb
+        KLRcwXgqO6JnTn07CcqE6IgOf6940HnLKlByc8MuL+lA1GFy9+/atSvx888/t/AGL0EfAKKGjD5Rx2CR
+        QgQmQ4xHLOrErzohftARinyTnomtMSYbptu5c+dytGEcg5aE1Qc3JpwULPavANuzZ49Trud+YjwyehvI
+        Yf5GBuNVaEvShp68jOOF1Bn6eO6553wkrEq0dqgMj4+utC9T0JdQb+ZZR556PpcIhA4tWrT4i2SEYQCf
+        JLyDQsflBlzNZaFkADca+yoBduQl4Uu0L3atotPmDzotswnvhJUcOZfBkrM5cDZdjx07lkxffj3tVCkz
+        MgNHKoZKaNeuHUrk6pkjDm+LosURdVC2rzJ5J0SRwsf0bKcF5YCio7L5o08//TTlaXrmJAivUaPG0Kys
+        LCem1AnwrGT2osc5gRRvOjcKMnaCnp8Uk2Tb/a0x9778EjZxm4HRDbgXA1gg2SLxSzl94H2wBTE/4F/D
+        sdurVy8fiZYWkDeypnOZg74Eepv9u4WEhCQoRvfJ8eS/9tprK8LCwh5Xkjly1qxZSxU+OqGadE9R3R5i
+        kvJeOpkr0r42t1YxMTEbyTH69+8PuD+VjHv4cDnF59ic0pMLlQHikuKwVMQuavT444//hYWUMhjgPyVr
+        KLZk82JE+7pq/zLKAnopvEoyQEIZ7fkNV2y8gGsokikBnPix6yuvvLLYP0nuxS3WZ5KcEt1PnjyZ1717
+        d3Q6zrMY70sdNkUg0wadWRAzcEkXhTb0Qf+2qBD10Id+8UadpctagcmA/T+SccdPOf2WBPRt0enQoUPB
+        dLI6pdGbEKddaGjoi9HR0U4oxpWpm5DJxknyqnwkx704p2x3btwqyL5GOJUaOtknCDNF3PpIL+7quWnq
+        EhcX9zVXn9KHl5xcI5vtypSYQLXq1auPeOyxx/KJC7t06YJxUJ5FxoMFGxQZbTFe1y1btvzoN26+2g6X
+        jLYGHEDDtWZfHbOZOtqY1HeSjdm+fXs8xtIz9/dsFNtohEyd1q9f/wvhhNra6cAC0x91jBkHY9piQPyW
+        ZlEYt75AwPGN12GR3R6G+mzeMHnU8dw1+/VmHoRAnAj026eYRBbgtFfiud82h55/K+j5m1i48ahRo2Ye
+        P348RXbKk+fchF76O0F8Qn/vkowXWYSceHj6R4+KtK8RcscGcoCHie0VjvkaNWr0rhzmOIXZmfQjpzhd
+        ddCVccucUALDtRStu/322zkefUouubsmLgS8AMJtCP4GAAC+bWxs7HsAHi8vA9POEhObOL+AooWSl789
+        +eSTvInLFngW5ObmkqUXkDSq3DaK1W/5zDPP7OR0UB0yee7v7Q0kOpgeeGY8FMc8z6ZnacDDJruPedSq
+        VYurSW5F3H0xFna4u3Hjxk9Rj/7887XNSr+9MjIynJsOle3TM2EefZuuNQTAwcp/kqwPydxxMFxSvbFV
+        9aeeemqy7JhPf+p7s2TceFCfMAagcy3IyU2oYGtZkfYNJBxp3VatWv07oFco5hOGjii3+Jw5SJdklXOD
+        xLjoUC6E8biqi5biiVxrFRUV+d59913uSInluNPFYHbEMXlAcf+zzz67IDs7u8Af1nDHT336ok838Rwa
+        Hh4+QSFN0dGjR31z586NZ5ICB/e1JISAw4zFDq8tgL3UqVMn3xNPPMG15TbJMAZXXBgWPbhT7qRjceGg
+        QYOIR1kc2tIP/UXKm/1w+vRpWxTiRDarbS6IX+bm3E327NmTlzA2js2ZBQAQUYsXL95APfqTR5oqGTdR
+        jEm9bgpb8qdOncq8CBn45ohydCWs6L5y5Urno76UlBTT6WExeQGARK+S6g147l6zZs06JX988EdYkzxx
+        4sQlyjeIz3nJBPDbi7lGZD7oSDs4rILsG0gAmROl+9ixY9MWLFjgEx4KeMNLH/4Y30LGC/VxyUTH7OBa
+        2u0PaODjAB86ePDgz5MnT36zUqVK9mkxRuktA0zdsGHDHjaHH/CJtKUPsXkDN/EMgDoqaz+6evVqriHz
+        maSAw5s5XviwEEYYBsPzsmg/9bQJi95666046fag5Cxm34cffnjG7t27f0JXPIR04EUGXgyDsXh9BYpD
+        lOtkYVH4/Nk+cmI89IIdwFJPnitfp9EizZlbBeZMrtGjefPmoxX+fW2v66UXoQ1vammLvni+iEmTJp3o
+        0KGDT2Fc4YgRI96TjIuBXhEREWO3bdu2lzFef/31IhJhTgQln4tvueUWPDLAx0ZskpLoDbCqyX7jNPdU
+        dBo+fDhNHOKlEzchmzZt2i3bfaLEkW//cS52XcxGrgj7BhIy2jeNiopahbcHD82aNePL3nzJ3ad+uZIp
+        guG7a/A4gTnXwM9bST4q0o5MTktLc77vAOwyVr6Mtk5tyPDtVXGwiUJshvB77rnnHYwMa5x0yYglMVLg
+        UYZHwbP00xjOGzoB0peenp6txUwh/kMP60cewuJAFqVa06ZNo7WQcfKoOfJUPhL1efPmHdVJ8x9KpvF+
+        nF7mkZyjWnNKoz8BhTnnKcZPiY+PT1JCnaYYvMiOcenDaQAwWBzzfCxyHYGQ1/58eOfLysryqe3ZhISE
+        M2pPKIcn26X2CZQbS36+SpUqhCX1mjRp0quEemMvwkjCq2GVK1f+TP3+4u8vW+x8OwNDOKidO3ceVM7G
+        G1P74I8XP+Vt32CEPOTOO+8cMWXKlHwcAONID/IgHIn71C9XsoVD2eba1UOlxFIp86PAcE6/BWK8XJaM
+        wD8uWak6JK3E8IQ0wTy8m+xY66L29Mck4/TMUYYhA9vyTJ8sTEcZfYHqH/EvKF4hT/x3ybkt4ui1T23Z
+        eHcPHTrUSYqCsdqx2ezrPsYBuAC4q/p7W+PsVh0+usoVOx5InCr5ToH6BdUjVqe+tYeYH+M3UZ1Y1T2g
+        NvyrK9pn6fl7yWeofKD+Xi/ZUf1u1HjzJOdUQf9GpdDbQN+0X79+Uw4fPpzEWOqTFz5/FPfX+oxW/wsl
+        O057SMBMCwsL43sW1ozNXt72DUbYjJO8+2effXbcvleSHV6WjA15oXblQijDLsQYGIV43nl7J+YNpP3j
+        aBYdD8PCY3jzmMURk8F7cx2FN6APJh/o5Y3okzZsFoyOF2B89LAkjT7QlY1DP+hCXOn+LpvYmtMI7xz4
+        HTfkHoc4ltf0JPKEN4zF3Hnm5RmLSRhiHt5NBnw8InNkfNpiP/pkQQkvSCzpCx0J7XA0tGMe7n9fcDG9
+        Gb/mkCFDxuOdb731Vk6RZZKhJyc2NsDWOJUBAvT3fOSGV9XfKySzFz8VYd9Aoh/K+yofcDaPNgofw2Gr
+        ck1gL0YsJgNjFDYAC8JCW2KHjDImVRKwG1GXxaI9mwWvUdwETRcWx3RBB5g+AvVwj0EddGZjwW79A0Hr
+        HocFtnFs3jwjp/xiOtv47j6sLXIYnXlm/tZfafXm7zb79u1zLgQEGl48WbJpfWIXbNQgPDw8du7cuY5H
+        Fei3SwZoLRytCPu6ibHqKJGdg+7opA3LRuTll+n0/0ooEIwvhX5rH+7xi+sjWF03X4yC1TcuKf3WtsHa
+        uRniF3B2zcnJKVCIAJB/4llsnpI6/LK5+AcmUw1gqsunIJwAANpN7nGML0TB6ro5GCFHJzZHJF/XopM2
+        bIUmsB5dngR4AH3nPXv25CihBMx4+qFiwiW8Lh6XEIJwrc+qVat2GegVO0+TzK5aK4oAM14c3eq3bt16
+        PBckrpOHcJCT5UIbxiOPHA/eMioq6nuAwwdcCxcu/CYkJOQxyYmticl7Dx48eNrGjRv3G+AFMF7x21Vr
+        RQEMwJM3cLp0Dg0N/dOOHTuOoRNeXgk3X4ZW9Cb06DIkABIiwDwg4DhfJqampvr4t7GJiYm/uK+XSV5V
+        h38q+De1IQSyT6IrivDwDZR/bI2Pj0/k/xXiMwx0UizPt168PPO8vEfFEgABTLwf6SHwLBWojwpI58UF
+        Yq4duX5MlHytNgcvp7hB4iaGRLIiAYaejaVLCptTvznS6ZDCrOcl57aKkIdY3yOPiiWAC4CJ3bmC5I0r
+        14hcOdq1o/2/o9zHkwdc7FalvIjwhmtZ3uiiH0wMz9UuOnnJq0ceeeSRRx555JFHHnnkkUceeeSRRx55
+        5JFHHl3WdNVV/wtVsE75FsWw9gAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>40</value>
   </metadata>
